[package]
name = "megamind"
version = "0.12.0"
edition = "2021"
description = "A library for interacting with the Genius API."
authors = ["Robert Yin <bobertoyin@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bobertoyin/megamind"
documentation = "https://docs.rs/megamind"
keywords = ["genius", "music"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
catchall = ["dep:serde_json"]

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
thiserror = "1.0.49"

[dev-dependencies]
assert-json-diff = "2.0.2"
env_logger = "0.10.0"
rstest = "0.18.2"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros"] }
